feat!(entregas): añadir panel de evaluaciones y reforzar el flujo de entregas y almacenamiento
- incorpora la ruta /evaluaciones con filtros por grupo/actividad/entregable, orden, paginación y descarga ZIP
- añade soporte SOLO_TEXTO/ENLACE en creación y envío de entregas con validaciones en frontend y backend
- amplía EntregaResumenDTO con curso/actividad/entregable para contexto de evaluación
- refuerza EntregaService (límite de archivos, validación ZIP, lectura local segura, anti path traversal y colisiones en ZIP)
- mejora integración OneDrive: sanitización de nombre y corrección de doble encoding en rutas (%2520)
- actualiza tipados y flujo de calificación para usar nota y mejorar mensajes de error API
- agrega/actualiza tests backend y frontend (EntregaService, OneDriveService, Cloudinary, controllers y exception handler)
- actualiza .gitignore para artefactos Maven locales

BREAKING CHANGE: el payload de calificación cambia de calificacion a nota, y la calificación usa profesorId como parámetro.